--- a/manifest.json
+++ b/manifest.json
@@ -8,42 +8,42 @@
     "start_url": "index.html",
     "icons": [
         {
-            "src": "icons/icon.png",
+            "src": "icon.png",
             "type": "image/png",
             "sizes": "72x72"
         },
         {
-            "src": "icons/icon.png",
+            "src": "icon.png",
             "type": "image/png",
             "sizes": "96x96"
         },
         {
-            "src": "icons/icon.png",
+            "src": "icon.png",
             "type": "image/png",
             "sizes": "128x128"
         },
         {
-            "src": "icons/icon.png",
+            "src": "icon.png",
             "type": "image/png",
             "sizes": "144x144"
         },
         {
-            "src": "icons/icon.png",
+            "src": "icon.png",
             "type": "image/png",
             "sizes": "152x152"
         },
         {
-            "src": "icons/icon.png",
+            "src": "icon.png",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "icons/icon.png",
+            "src": "icon.png",
             "type": "image/png",
             "sizes": "384x384"
         },
         {
-            "src": "icons/icon.png",
+            "src": "icon.png",
             "type": "image/png",
             "sizes": "512x512"
         }
