--- a/manifest.json
+++ b/manifest.json
@@ -6,6 +6,7 @@
     "display": "standalone",
     "orientation": "portrait",
     "start_url": "index.html",
+    "prefer_related_applications": true,
     "icons": [
         {
             "src": "icon.png",
