--- a/manifest.json
+++ b/manifest.json
@@ -9,42 +9,12 @@
     "prefer_related_applications": true,
     "icons": [
         {
-            "src": "icon.png",
-            "type": "image/png",
-            "sizes": "72x72"
-        },
-        {
-            "src": "icon.png",
-            "type": "image/png",
-            "sizes": "96x96"
-        },
-        {
-            "src": "icon.png",
-            "type": "image/png",
-            "sizes": "128x128"
-        },
-        {
-            "src": "icon.png",
-            "type": "image/png",
-            "sizes": "144x144"
-        },
-        {
-            "src": "icon.png",
-            "type": "image/png",
-            "sizes": "152x152"
-        },
-        {
-            "src": "icon.png",
+            "src": "icon-192x192.png",
             "type": "image/png",
             "sizes": "192x192"
         },
         {
-            "src": "icon.png",
-            "type": "image/png",
-            "sizes": "384x384"
-        },
-        {
-            "src": "icon.png",
+            "src": "icon-512x512.png",
             "type": "image/png",
             "sizes": "512x512"
         }
